--- a/ClickParking/app/src/main/res/values/colors.xml
+++ b/ClickParking/app/src/main/res/values/colors.xml
@@ -1,5 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="black">#FF000000</color>
+    <color name="black_lightend">#FF222222</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="gray">#FFAAAAAA</color>
+    <color name="blue">#FF38B6FF</color>   <!-- Blue -->
+    <color name="yellow">#FFFFFF00</color>  <!-- Yellow -->
+    <color name="red">#FFFF0000</color>
+    <color name="light_blue_600">#FF039BE5</color>
+    <color name="light_blue_900">#FF01579B</color>
+    <color name="light_blue_A200">#FF40C4FF</color>
+    <color name="light_blue_A400">#FF00B0FF</color>
+    <color name="black_overlay">#66000000</color>     <!-- Red -->
 </resources>
