--- a/ClickParking/app/src/main/res/values/themes.xml
+++ b/ClickParking/app/src/main/res/values/themes.xml
@@ -1,9 +1,14 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.ClickParking" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.Clickpark" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
-    <style name="Theme.ClickParking" parent="Base.Theme.ClickParking" />
+    <style name="Theme.Clickpark" parent="Base.Theme.Clickpark" />
+
+    <style name="ThemeOverlay.Clickpark.FullscreenContainer" parent="">
+        <item name="fullscreenBackgroundColor">@color/light_blue_600</item>
+        <item name="fullscreenTextColor">@color/light_blue_A200</item>
+    </style>
 </resources>
