--- a/ClickParking/app/src/main/res/layout/fragment_adicionar.xml
+++ b/ClickParking/app/src/main/res/layout/fragment_adicionar.xml
@@ -75,8 +75,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <View
-        android:id="@+id/Viewveiculo"
+    <ListView
+        android:id="@+id/listveiculo"
         android:layout_width="306dp"
         android:layout_height="150dp"
         android:layout_marginTop="8dp"
